crates/shape-address/tests/ui/shape_describe_missing_kind.stderr
error: ShapeDescribe requires #[shape(kind = "...")]
 --> tests/ui/shape_describe_missing_kind.rs:3:17
  |
3 | #[derive(Clone, ShapeDescribe)]
  |                 ^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `ShapeDescribe` (in Nightly builds, run with -Z macro-backtrace for more info)
