crates/shape-address/tests/ui/shape_describe_missing_kind.rs
use fe_shape_address::ShapeDescribe;

#[derive(Clone, ShapeDescribe)]
struct MissingKind {
    #[shape(structure)]
    value: String,
}

fn main() {}
